add facebook login method and configuration, and abstract google sign in button into its own component

--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">FirebaseAuthDemo</string>
+    <string name="facebook_app_id">264393971292283</string>
 </resources>
